--- a/_test/_data/education.yml
+++ b/_test/_data/education.yml
@@ -1,5 +1,5 @@
 - name: 김나림
-  dates: 2016 - 2019
+  dates: 2021 ~
   qualification: Degree
   quote: >
     Short institution or course description
