--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ instagram_username: https://www.instagram.com/rlanafla/
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.png
 about_content: | # this will include new lines to allow paragraphs
-  
+  공학 작문 및 발표 수업에서 github로 이력서 작성을 하고 있습니다.
 
 content:
   - title: Projects # Title for the section
@@ -49,7 +49,7 @@ content:
   - title: Experience
     layout: list
     content:
-      - layout: right
+      - layout: left
         title: Company name
         sub_title: Job title
         description: | # this will include new lines to allow paragraphs
@@ -57,12 +57,12 @@ content:
   - title: Education
     layout: list
     content:
-      - layout: top-right
+      - layout: top-rleft
         title: 부산대학교
         sub_title: 정보컴퓨터공학부
         caption: 2021~
         quote: >
-          부산대학교 정보컴퓨터공학부에서 4년간 알고리즘, 운영체제, 컴퓨터구조 등의 과목을 배웠습니다
+          부산대학교 정보컴퓨터공학부에서 4년간 알고리즘, 운영체제, 컴퓨터구조 등의 과목을 배웠습니다.
         description: 
   - title: A Little More About Me
     layout: text
