--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ website: https://github.com/rlanafla
 darkmode: false
 
 # Social links
-github_username: rlanafla
+github_username: https://github.com/rlanafla/
 instagram_username: https://www.instagram.com/rlanafla/
 
 
