--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ website: https://github.com/rlanafla
 darkmode: false
 
 # Social links
-github_username: https://github.com/rlanafla/
-instagram_username: https://www.instagram.com/rlanafla/
+github_username: rlanafla
+instagram_username: rlanafla
 
 
 
