--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ darkmode: false
 
 # Social links
 github_username: rlanafla
-instagram_username: rlanafla
+instagram_username: thereisnobadcat
 
 
 
